// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NPM package > export \`abstract/loadFileUploaderFrom.js\` should match snapshot > abstract/loadFileUploaderFrom.js 1`] = `
{
  "UC_WINDOW_KEY": "UC",
  "loadFileUploaderFrom": [Function],
}
`;

exports[`NPM package > export \`env\` should match snapshot > env 1`] = `
{
  "PACKAGE_NAME": "blocks",
  "PACKAGE_VERSION": "0.0.0-stub",
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/file-uploader.iife.min.js 1`] = `{}`;

exports[`NPM package > exports \`web\` should match snapshot > web/file-uploader.min.js 1`] = `
{
  "ActivityHeader": [Function],
  "BtnUi": [Function],
  "CameraSource": [Function],
  "CloudImageEditor": [Function],
  "CloudImageEditorActivity": [Function],
  "CloudImageEditorBlock": [Function],
  "Config": [Function],
  "Copyright": [Function],
  "CropFrame": [Function],
  "DropArea": [Function],
  "DropDown": [Function],
  "EditorAspectRatioButtonControl": [Function],
  "EditorCropButtonControl": [Function],
  "EditorFilterControl": [Function],
  "EditorFreeformButtonControl": [Function],
  "EditorImageCropper": [Function],
  "EditorImageFader": [Function],
  "EditorOperationControl": [Function],
  "EditorScroller": [Function],
  "EditorSlider": [Function],
  "EditorToolbar": [Function],
  "ExternalSource": [Function],
  "ExternalUploadSource": {
    "BOX": "box",
    "DROPBOX": "dropbox",
    "DROPBOX_CHOOSER": "dropboxchooser",
    "FACEBOOK": "facebook",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "ONEDRIVE": "onedrive",
  },
  "FileActionButton": [Function],
  "FileItem": [Function],
  "FileUploaderInline": [Function],
  "FileUploaderMinimal": [Function],
  "FileUploaderRegular": [Function],
  "FormInput": [Function],
  "Icon": [Function],
  "Img": [Function],
  "LineLoaderUi": [Function],
  "Modal": [Function],
  "NAVIGATE_CANCEL": Symbol(uc:navigate-cancel),
  "NoWrapModeSmartBtn": [Function],
  "PACKAGE_NAME": "blocks",
  "PACKAGE_VERSION": "0.0.0-stub",
  "PluginActivityHost": [Function],
  "PluginActivityRenderer": [Function],
  "PresenceToggle": [Function],
  "PrimaryAction": [Function],
  "ProgressBar": [Function],
  "ProgressBarCommon": [Function],
  "Select": [Function],
  "SimpleBtn": [Function],
  "SliderUi": [Function],
  "SmartBtn": [Function],
  "SourceBtn": [Function],
  "SourceList": [Function],
  "Spinner": [Function],
  "StartFrom": [Function],
  "Thumb": [Function],
  "TrayLifecycleController": [Function],
  "UID": [Function],
  "UploadCtxProvider": [Function],
  "UploadList": [Function],
  "UploadSource": {
    "API": "js-api",
    "BOX": "box",
    "CAMERA": "camera",
    "DROPBOX": "dropbox",
    "DROPBOX_CHOOSER": "dropboxchooser",
    "DROP_AREA": "drop-area",
    "EXTERNAL": "external",
    "FACEBOOK": "facebook",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "LOCAL": "local",
    "MOBILE_PHOTO_CAMERA": "mobile-photo-camera",
    "MOBILE_VIDEO_CAMERA": "mobile-video-camera",
    "ONEDRIVE": "onedrive",
    "URL": "url",
  },
  "Uploader": [Function],
  "UploaderController": [Function],
  "UploaderEventType": {
    "ACTIVITY_CHANGE": "activity-change",
    "CHANGE": "change",
    "COMMON_UPLOAD_FAILED": "common-upload-failed",
    "COMMON_UPLOAD_PROGRESS": "common-upload-progress",
    "COMMON_UPLOAD_START": "common-upload-start",
    "COMMON_UPLOAD_SUCCESS": "common-upload-success",
    "DONE_CLICK": "done-click",
    "FILE_ADDED": "file-added",
    "FILE_REMOVED": "file-removed",
    "FILE_UPLOAD_FAILED": "file-upload-failed",
    "FILE_UPLOAD_PROGRESS": "file-upload-progress",
    "FILE_UPLOAD_START": "file-upload-start",
    "FILE_UPLOAD_SUCCESS": "file-upload-success",
    "FILE_URL_CHANGED": "file-url-changed",
    "GROUP_CREATED": "group-created",
    "MODAL_CLOSE": "modal-close",
    "MODAL_OPEN": "modal-open",
    "UPLOAD_CLICK": "upload-click",
  },
  "UploaderInline": [Function],
  "UploaderMinimal": [Function],
  "UploaderRegistry": ko {
    "Ao": Map {},
    "Ut": Map {},
  },
  "UploaderRegular": [Function],
  "UploaderTray": [Function],
  "UrlSource": [Function],
  "buildOutputCollectionState": [Function],
  "cameraPlugin": {
    "id": "camera",
    "setup": [Function],
  },
  "cloudImageEditorPlugin": {
    "id": "cloud-image-editor",
    "setup": [Function],
  },
  "defineComponents": [Function],
  "defineLocale": [Function],
  "externalSourcesPlugin": {
    "id": "external-sources",
    "setup": [Function],
  },
  "getOutputItem": [Function],
  "imageShrinkPlugin": {
    "id": "image-shrink",
    "setup": [Function],
  },
  "instagramPlugin": {
    "id": "instagram",
    "setup": [Function],
  },
  "loadFileUploaderFrom": [Function],
  "localSourcePlugin": {
    "id": "local",
    "setup": [Function],
  },
  "toKebabCase": [Function],
  "uploaderContext": Symbol(uc-uploader),
  "urlSourcePlugin": {
    "id": "url-source",
    "setup": [Function],
  },
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-basic.min.css 1`] = `
{
  "default": "",
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-cloud-image-editor.min.css 1`] = `
{
  "default": "",
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-cloud-image-editor.min.js 1`] = `
{
  "BtnUi": [Function],
  "CloudImageEditor": [Function],
  "CloudImageEditorBlock": [Function],
  "Config": [Function],
  "CropFrame": [Function],
  "EditorAspectRatioButtonControl": [Function],
  "EditorCropButtonControl": [Function],
  "EditorFilterControl": [Function],
  "EditorFreeformButtonControl": [Function],
  "EditorImageCropper": [Function],
  "EditorImageFader": [Function],
  "EditorOperationControl": [Function],
  "EditorScroller": [Function],
  "EditorSlider": [Function],
  "EditorToolbar": [Function],
  "Icon": [Function],
  "LineLoaderUi": [Function],
  "PresenceToggle": [Function],
  "SliderUi": [Function],
  "defineComponents": [Function],
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-file-uploader-inline.min.css 1`] = `
{
  "default": "",
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-file-uploader-inline.min.js 1`] = `
{
  "ActivityHeader": [Function],
  "BtnUi": [Function],
  "CameraSource": [Function],
  "CloudImageEditor": [Function],
  "CloudImageEditorActivity": [Function],
  "CloudImageEditorBlock": [Function],
  "Config": [Function],
  "Copyright": [Function],
  "CropFrame": [Function],
  "DropArea": [Function],
  "DropDown": [Function],
  "EditorAspectRatioButtonControl": [Function],
  "EditorCropButtonControl": [Function],
  "EditorFilterControl": [Function],
  "EditorFreeformButtonControl": [Function],
  "EditorImageCropper": [Function],
  "EditorImageFader": [Function],
  "EditorOperationControl": [Function],
  "EditorScroller": [Function],
  "EditorSlider": [Function],
  "EditorToolbar": [Function],
  "ExternalSource": [Function],
  "ExternalUploadSource": {
    "BOX": "box",
    "DROPBOX": "dropbox",
    "DROPBOX_CHOOSER": "dropboxchooser",
    "FACEBOOK": "facebook",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "ONEDRIVE": "onedrive",
  },
  "FileActionButton": [Function],
  "FileItem": [Function],
  "FileUploaderInline": [Function],
  "FileUploaderMinimal": [Function],
  "FileUploaderRegular": [Function],
  "FormInput": [Function],
  "Icon": [Function],
  "Img": [Function],
  "LineLoaderUi": [Function],
  "Modal": [Function],
  "NAVIGATE_CANCEL": Symbol(uc:navigate-cancel),
  "NoWrapModeSmartBtn": [Function],
  "PACKAGE_NAME": "blocks",
  "PACKAGE_VERSION": "0.0.0-stub",
  "PluginActivityHost": [Function],
  "PluginActivityRenderer": [Function],
  "PresenceToggle": [Function],
  "PrimaryAction": [Function],
  "ProgressBar": [Function],
  "ProgressBarCommon": [Function],
  "Select": [Function],
  "SimpleBtn": [Function],
  "SliderUi": [Function],
  "SmartBtn": [Function],
  "SourceBtn": [Function],
  "SourceList": [Function],
  "Spinner": [Function],
  "StartFrom": [Function],
  "Thumb": [Function],
  "TrayLifecycleController": [Function],
  "UID": [Function],
  "UploadCtxProvider": [Function],
  "UploadList": [Function],
  "UploadSource": {
    "API": "js-api",
    "BOX": "box",
    "CAMERA": "camera",
    "DROPBOX": "dropbox",
    "DROPBOX_CHOOSER": "dropboxchooser",
    "DROP_AREA": "drop-area",
    "EXTERNAL": "external",
    "FACEBOOK": "facebook",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "LOCAL": "local",
    "MOBILE_PHOTO_CAMERA": "mobile-photo-camera",
    "MOBILE_VIDEO_CAMERA": "mobile-video-camera",
    "ONEDRIVE": "onedrive",
    "URL": "url",
  },
  "Uploader": [Function],
  "UploaderController": [Function],
  "UploaderEventType": {
    "ACTIVITY_CHANGE": "activity-change",
    "CHANGE": "change",
    "COMMON_UPLOAD_FAILED": "common-upload-failed",
    "COMMON_UPLOAD_PROGRESS": "common-upload-progress",
    "COMMON_UPLOAD_START": "common-upload-start",
    "COMMON_UPLOAD_SUCCESS": "common-upload-success",
    "DONE_CLICK": "done-click",
    "FILE_ADDED": "file-added",
    "FILE_REMOVED": "file-removed",
    "FILE_UPLOAD_FAILED": "file-upload-failed",
    "FILE_UPLOAD_PROGRESS": "file-upload-progress",
    "FILE_UPLOAD_START": "file-upload-start",
    "FILE_UPLOAD_SUCCESS": "file-upload-success",
    "FILE_URL_CHANGED": "file-url-changed",
    "GROUP_CREATED": "group-created",
    "MODAL_CLOSE": "modal-close",
    "MODAL_OPEN": "modal-open",
    "UPLOAD_CLICK": "upload-click",
  },
  "UploaderInline": [Function],
  "UploaderMinimal": [Function],
  "UploaderRegistry": ko {
    "Ao": Map {},
    "Ut": Map {},
  },
  "UploaderRegular": [Function],
  "UploaderTray": [Function],
  "UrlSource": [Function],
  "buildOutputCollectionState": [Function],
  "cameraPlugin": {
    "id": "camera",
    "setup": [Function],
  },
  "cloudImageEditorPlugin": {
    "id": "cloud-image-editor",
    "setup": [Function],
  },
  "defineComponents": [Function],
  "defineLocale": [Function],
  "externalSourcesPlugin": {
    "id": "external-sources",
    "setup": [Function],
  },
  "getOutputItem": [Function],
  "imageShrinkPlugin": {
    "id": "image-shrink",
    "setup": [Function],
  },
  "instagramPlugin": {
    "id": "instagram",
    "setup": [Function],
  },
  "loadFileUploaderFrom": [Function],
  "localSourcePlugin": {
    "id": "local",
    "setup": [Function],
  },
  "toKebabCase": [Function],
  "uploaderContext": Symbol(uc-uploader),
  "urlSourcePlugin": {
    "id": "url-source",
    "setup": [Function],
  },
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-file-uploader-minimal.min.css 1`] = `
{
  "default": "",
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-file-uploader-minimal.min.js 1`] = `
{
  "ActivityHeader": [Function],
  "BtnUi": [Function],
  "CameraSource": [Function],
  "CloudImageEditor": [Function],
  "CloudImageEditorActivity": [Function],
  "CloudImageEditorBlock": [Function],
  "Config": [Function],
  "Copyright": [Function],
  "CropFrame": [Function],
  "DropArea": [Function],
  "DropDown": [Function],
  "EditorAspectRatioButtonControl": [Function],
  "EditorCropButtonControl": [Function],
  "EditorFilterControl": [Function],
  "EditorFreeformButtonControl": [Function],
  "EditorImageCropper": [Function],
  "EditorImageFader": [Function],
  "EditorOperationControl": [Function],
  "EditorScroller": [Function],
  "EditorSlider": [Function],
  "EditorToolbar": [Function],
  "ExternalSource": [Function],
  "ExternalUploadSource": {
    "BOX": "box",
    "DROPBOX": "dropbox",
    "DROPBOX_CHOOSER": "dropboxchooser",
    "FACEBOOK": "facebook",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "ONEDRIVE": "onedrive",
  },
  "FileActionButton": [Function],
  "FileItem": [Function],
  "FileUploaderInline": [Function],
  "FileUploaderMinimal": [Function],
  "FileUploaderRegular": [Function],
  "FormInput": [Function],
  "Icon": [Function],
  "Img": [Function],
  "LineLoaderUi": [Function],
  "Modal": [Function],
  "NAVIGATE_CANCEL": Symbol(uc:navigate-cancel),
  "NoWrapModeSmartBtn": [Function],
  "PACKAGE_NAME": "blocks",
  "PACKAGE_VERSION": "0.0.0-stub",
  "PluginActivityHost": [Function],
  "PluginActivityRenderer": [Function],
  "PresenceToggle": [Function],
  "PrimaryAction": [Function],
  "ProgressBar": [Function],
  "ProgressBarCommon": [Function],
  "Select": [Function],
  "SimpleBtn": [Function],
  "SliderUi": [Function],
  "SmartBtn": [Function],
  "SourceBtn": [Function],
  "SourceList": [Function],
  "Spinner": [Function],
  "StartFrom": [Function],
  "Thumb": [Function],
  "TrayLifecycleController": [Function],
  "UID": [Function],
  "UploadCtxProvider": [Function],
  "UploadList": [Function],
  "UploadSource": {
    "API": "js-api",
    "BOX": "box",
    "CAMERA": "camera",
    "DROPBOX": "dropbox",
    "DROPBOX_CHOOSER": "dropboxchooser",
    "DROP_AREA": "drop-area",
    "EXTERNAL": "external",
    "FACEBOOK": "facebook",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "LOCAL": "local",
    "MOBILE_PHOTO_CAMERA": "mobile-photo-camera",
    "MOBILE_VIDEO_CAMERA": "mobile-video-camera",
    "ONEDRIVE": "onedrive",
    "URL": "url",
  },
  "Uploader": [Function],
  "UploaderController": [Function],
  "UploaderEventType": {
    "ACTIVITY_CHANGE": "activity-change",
    "CHANGE": "change",
    "COMMON_UPLOAD_FAILED": "common-upload-failed",
    "COMMON_UPLOAD_PROGRESS": "common-upload-progress",
    "COMMON_UPLOAD_START": "common-upload-start",
    "COMMON_UPLOAD_SUCCESS": "common-upload-success",
    "DONE_CLICK": "done-click",
    "FILE_ADDED": "file-added",
    "FILE_REMOVED": "file-removed",
    "FILE_UPLOAD_FAILED": "file-upload-failed",
    "FILE_UPLOAD_PROGRESS": "file-upload-progress",
    "FILE_UPLOAD_START": "file-upload-start",
    "FILE_UPLOAD_SUCCESS": "file-upload-success",
    "FILE_URL_CHANGED": "file-url-changed",
    "GROUP_CREATED": "group-created",
    "MODAL_CLOSE": "modal-close",
    "MODAL_OPEN": "modal-open",
    "UPLOAD_CLICK": "upload-click",
  },
  "UploaderInline": [Function],
  "UploaderMinimal": [Function],
  "UploaderRegistry": ko {
    "Ao": Map {},
    "Ut": Map {},
  },
  "UploaderRegular": [Function],
  "UploaderTray": [Function],
  "UrlSource": [Function],
  "buildOutputCollectionState": [Function],
  "cameraPlugin": {
    "id": "camera",
    "setup": [Function],
  },
  "cloudImageEditorPlugin": {
    "id": "cloud-image-editor",
    "setup": [Function],
  },
  "defineComponents": [Function],
  "defineLocale": [Function],
  "externalSourcesPlugin": {
    "id": "external-sources",
    "setup": [Function],
  },
  "getOutputItem": [Function],
  "imageShrinkPlugin": {
    "id": "image-shrink",
    "setup": [Function],
  },
  "instagramPlugin": {
    "id": "instagram",
    "setup": [Function],
  },
  "loadFileUploaderFrom": [Function],
  "localSourcePlugin": {
    "id": "local",
    "setup": [Function],
  },
  "toKebabCase": [Function],
  "uploaderContext": Symbol(uc-uploader),
  "urlSourcePlugin": {
    "id": "url-source",
    "setup": [Function],
  },
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-file-uploader-regular.min.css 1`] = `
{
  "default": "",
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-file-uploader-regular.min.js 1`] = `
{
  "ActivityHeader": [Function],
  "BtnUi": [Function],
  "CameraSource": [Function],
  "CloudImageEditor": [Function],
  "CloudImageEditorActivity": [Function],
  "CloudImageEditorBlock": [Function],
  "Config": [Function],
  "Copyright": [Function],
  "CropFrame": [Function],
  "DropArea": [Function],
  "DropDown": [Function],
  "EditorAspectRatioButtonControl": [Function],
  "EditorCropButtonControl": [Function],
  "EditorFilterControl": [Function],
  "EditorFreeformButtonControl": [Function],
  "EditorImageCropper": [Function],
  "EditorImageFader": [Function],
  "EditorOperationControl": [Function],
  "EditorScroller": [Function],
  "EditorSlider": [Function],
  "EditorToolbar": [Function],
  "ExternalSource": [Function],
  "ExternalUploadSource": {
    "BOX": "box",
    "DROPBOX": "dropbox",
    "DROPBOX_CHOOSER": "dropboxchooser",
    "FACEBOOK": "facebook",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "ONEDRIVE": "onedrive",
  },
  "FileActionButton": [Function],
  "FileItem": [Function],
  "FileUploaderInline": [Function],
  "FileUploaderMinimal": [Function],
  "FileUploaderRegular": [Function],
  "FormInput": [Function],
  "Icon": [Function],
  "Img": [Function],
  "LineLoaderUi": [Function],
  "Modal": [Function],
  "NAVIGATE_CANCEL": Symbol(uc:navigate-cancel),
  "NoWrapModeSmartBtn": [Function],
  "PACKAGE_NAME": "blocks",
  "PACKAGE_VERSION": "0.0.0-stub",
  "PluginActivityHost": [Function],
  "PluginActivityRenderer": [Function],
  "PresenceToggle": [Function],
  "PrimaryAction": [Function],
  "ProgressBar": [Function],
  "ProgressBarCommon": [Function],
  "Select": [Function],
  "SimpleBtn": [Function],
  "SliderUi": [Function],
  "SmartBtn": [Function],
  "SourceBtn": [Function],
  "SourceList": [Function],
  "Spinner": [Function],
  "StartFrom": [Function],
  "Thumb": [Function],
  "TrayLifecycleController": [Function],
  "UID": [Function],
  "UploadCtxProvider": [Function],
  "UploadList": [Function],
  "UploadSource": {
    "API": "js-api",
    "BOX": "box",
    "CAMERA": "camera",
    "DROPBOX": "dropbox",
    "DROPBOX_CHOOSER": "dropboxchooser",
    "DROP_AREA": "drop-area",
    "EXTERNAL": "external",
    "FACEBOOK": "facebook",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "LOCAL": "local",
    "MOBILE_PHOTO_CAMERA": "mobile-photo-camera",
    "MOBILE_VIDEO_CAMERA": "mobile-video-camera",
    "ONEDRIVE": "onedrive",
    "URL": "url",
  },
  "Uploader": [Function],
  "UploaderController": [Function],
  "UploaderEventType": {
    "ACTIVITY_CHANGE": "activity-change",
    "CHANGE": "change",
    "COMMON_UPLOAD_FAILED": "common-upload-failed",
    "COMMON_UPLOAD_PROGRESS": "common-upload-progress",
    "COMMON_UPLOAD_START": "common-upload-start",
    "COMMON_UPLOAD_SUCCESS": "common-upload-success",
    "DONE_CLICK": "done-click",
    "FILE_ADDED": "file-added",
    "FILE_REMOVED": "file-removed",
    "FILE_UPLOAD_FAILED": "file-upload-failed",
    "FILE_UPLOAD_PROGRESS": "file-upload-progress",
    "FILE_UPLOAD_START": "file-upload-start",
    "FILE_UPLOAD_SUCCESS": "file-upload-success",
    "FILE_URL_CHANGED": "file-url-changed",
    "GROUP_CREATED": "group-created",
    "MODAL_CLOSE": "modal-close",
    "MODAL_OPEN": "modal-open",
    "UPLOAD_CLICK": "upload-click",
  },
  "UploaderInline": [Function],
  "UploaderMinimal": [Function],
  "UploaderRegistry": ko {
    "Ao": Map {},
    "Ut": Map {},
  },
  "UploaderRegular": [Function],
  "UploaderTray": [Function],
  "UrlSource": [Function],
  "buildOutputCollectionState": [Function],
  "cameraPlugin": {
    "id": "camera",
    "setup": [Function],
  },
  "cloudImageEditorPlugin": {
    "id": "cloud-image-editor",
    "setup": [Function],
  },
  "defineComponents": [Function],
  "defineLocale": [Function],
  "externalSourcesPlugin": {
    "id": "external-sources",
    "setup": [Function],
  },
  "getOutputItem": [Function],
  "imageShrinkPlugin": {
    "id": "image-shrink",
    "setup": [Function],
  },
  "instagramPlugin": {
    "id": "instagram",
    "setup": [Function],
  },
  "loadFileUploaderFrom": [Function],
  "localSourcePlugin": {
    "id": "local",
    "setup": [Function],
  },
  "toKebabCase": [Function],
  "uploaderContext": Symbol(uc-uploader),
  "urlSourcePlugin": {
    "id": "url-source",
    "setup": [Function],
  },
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-img.min.js 1`] = `
{
  "Img": [Function],
}
`;

exports[`NPM package > root ssr stubs export should match snapshot > root export 1`] = `
{
  "ActivityHeader": [Function],
  "BtnUi": [Function],
  "CameraSource": [Function],
  "CloudImageEditor": [Function],
  "CloudImageEditorActivity": [Function],
  "CloudImageEditorBlock": [Function],
  "Config": [Function],
  "Copyright": [Function],
  "CropFrame": [Function],
  "DropArea": [Function],
  "DropDown": [Function],
  "EditorAspectRatioButtonControl": [Function],
  "EditorCropButtonControl": [Function],
  "EditorFilterControl": [Function],
  "EditorFreeformButtonControl": [Function],
  "EditorImageCropper": [Function],
  "EditorImageFader": [Function],
  "EditorOperationControl": [Function],
  "EditorScroller": [Function],
  "EditorSlider": [Function],
  "EditorToolbar": [Function],
  "ExternalSource": [Function],
  "ExternalUploadSource": {
    "BOX": "box",
    "DROPBOX": "dropbox",
    "DROPBOX_CHOOSER": "dropboxchooser",
    "FACEBOOK": "facebook",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "ONEDRIVE": "onedrive",
  },
  "FileActionButton": [Function],
  "FileItem": [Function],
  "FileUploaderInline": [Function],
  "FileUploaderMinimal": [Function],
  "FileUploaderRegular": [Function],
  "FormInput": [Function],
  "IS_SSR_STUBS": true,
  "Icon": [Function],
  "Img": [Function],
  "LineLoaderUi": [Function],
  "Modal": [Function],
  "NAVIGATE_CANCEL": Symbol(uc:navigate-cancel),
  "NoWrapModeSmartBtn": [Function],
  "PACKAGE_NAME": "blocks",
  "PACKAGE_VERSION": "0.0.0-stub",
  "PluginActivityHost": [Function],
  "PluginActivityRenderer": [Function],
  "PresenceToggle": [Function],
  "PrimaryAction": [Function],
  "ProgressBar": [Function],
  "ProgressBarCommon": [Function],
  "Select": [Function],
  "SimpleBtn": [Function],
  "SliderUi": [Function],
  "SmartBtn": [Function],
  "SourceBtn": [Function],
  "SourceList": [Function],
  "Spinner": [Function],
  "StartFrom": [Function],
  "Thumb": [Function],
  "TrayLifecycleController": [Function],
  "UID": [Function],
  "UploadCtxProvider": [Function],
  "UploadList": [Function],
  "UploadSource": {
    "API": "js-api",
    "BOX": "box",
    "CAMERA": "camera",
    "DROPBOX": "dropbox",
    "DROPBOX_CHOOSER": "dropboxchooser",
    "DROP_AREA": "drop-area",
    "EXTERNAL": "external",
    "FACEBOOK": "facebook",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "LOCAL": "local",
    "MOBILE_PHOTO_CAMERA": "mobile-photo-camera",
    "MOBILE_VIDEO_CAMERA": "mobile-video-camera",
    "ONEDRIVE": "onedrive",
    "URL": "url",
  },
  "Uploader": [Function],
  "UploaderController": [Function],
  "UploaderEventType": {
    "ACTIVITY_CHANGE": "activity-change",
    "CHANGE": "change",
    "COMMON_UPLOAD_FAILED": "common-upload-failed",
    "COMMON_UPLOAD_PROGRESS": "common-upload-progress",
    "COMMON_UPLOAD_START": "common-upload-start",
    "COMMON_UPLOAD_SUCCESS": "common-upload-success",
    "DONE_CLICK": "done-click",
    "FILE_ADDED": "file-added",
    "FILE_REMOVED": "file-removed",
    "FILE_UPLOAD_FAILED": "file-upload-failed",
    "FILE_UPLOAD_PROGRESS": "file-upload-progress",
    "FILE_UPLOAD_START": "file-upload-start",
    "FILE_UPLOAD_SUCCESS": "file-upload-success",
    "FILE_URL_CHANGED": "file-url-changed",
    "GROUP_CREATED": "group-created",
    "MODAL_CLOSE": "modal-close",
    "MODAL_OPEN": "modal-open",
    "UPLOAD_CLICK": "upload-click",
  },
  "UploaderInline": [Function],
  "UploaderMinimal": [Function],
  "UploaderRegistry": {
    "_consumers": {},
    "_map": {},
  },
  "UploaderRegular": [Function],
  "UploaderTray": [Function],
  "UrlSource": [Function],
  "buildOutputCollectionState": [Function],
  "cameraPlugin": {
    "id": "camera",
  },
  "cloudImageEditorPlugin": {
    "id": "cloud-image-editor",
  },
  "defineComponents": [Function],
  "defineLocale": [Function],
  "externalSourcesPlugin": {
    "id": "external-sources",
  },
  "getOutputItem": [Function],
  "imageShrinkPlugin": {
    "id": "image-shrink",
  },
  "instagramPlugin": {
    "id": "instagram",
  },
  "loadFileUploaderFrom": [Function],
  "localSourcePlugin": {
    "id": "local",
  },
  "toKebabCase": [Function],
  "uploaderContext": Symbol(uc-uploader),
  "urlSourcePlugin": {
    "id": "url-source",
  },
}
`;
